--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,37 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  host: localhost
+  username: postgres
+  password: 1234567890
+  port: 5433
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: hello_rail_react_development
+  host: localhost
+  username: postgres
+  password: 1234567890
+  port: 5433
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: hello_rail_react_test
+  host: localhost
+  username: postgres
+  password: 1234567890
+  port: 5433
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  url: <%= ENV["DATABASE_URL"] %>
+  database: hello_rail_react_production
+  username: postgres
+  password: 1234567890
